feat: add css constants

--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <logo>
+            <img src="./assets/images/logo.png" alt="Logo">
+        </logo>
+        <title>
+            <div>Превратите уездный город</div>
+            <div>в столицу земного шара</в>
+        </title>
+        <div>
+            Оплатите взнос на телеграммы для организации Международного васюкинского турнира по шахматам
+        </div>
+        <div>
+            <a class="button" href="#">Поддержать шахмтную мысль</a>
+            <a class="button" href="#">Подробнее о турнире</a>
+        </div>
+    </header>
+    <main></main>
+    <footer>Все персонажи, события и цитаты являются вымышленными и не принадлежат создателям сайта. С подробностями можно познакомиться в главе XXXIV романа Ильи Ильфа и Евгения Петрова «Двенадцать стульев».</footer>
 </body>
     <script src="./js/index.js"></script>
 </html>
